--- a/react-to-do-app/package.json
+++ b/react-to-do-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "immutability-helper": "^2.1.1",
     "keycode-js": "^0.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
